WIP /cv bg cards

--- a/projets.html
+++ b/projets.html
@@ -422,7 +422,7 @@
                             <img src="../img/projects/bgShapes2-min.png" class="projectShapeBgAnim1 projectShapesDiv-top-left isDesktop" />
 
                             <!-- Shape absolute (bas-droite)-->
-                            <img src="../img/projects/bgShapes1_squadforge2-min.png" class="projectShapeBgAnim2 projectShapesDiv-bottom-right" />
+                            <img src="../img/projects/bgShapes1_squadforge2-min.png" class="projectShapeBgAnim2 projectShapesDiv-bottom-right  fixBottom" />
 
 
                             <div id="projectContainer">
@@ -814,7 +814,14 @@
 
         </div>
 
-        <footer>www.portfolio.basilek.ovh - <a href="https://www.linkedin.com/in/basile-kuntz-719278267/" class="socialFooter"><i class="fa-brands fa-linkedin"></i></a><a href="https://github.com/baku67" class="socialFooter"><i class="fa-brands fa-github"></i></a></footer>
+        <footer class="footerProkets">
+            <span><a href="mentionslegales.html">Mentions légales</a> - www.bk-dev.fr - </span>
+            <a href="https://www.linkedin.com/in/basile-kuntz-719278267/" class="socialFooter"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/baku67" class="socialFooter"><i class="fa-brands fa-github"></i></a>
+            <br>
+            <span style="font-size:80%;"><a href='https://pngtree.com/freepng/blue-geometric-honeycomb_2498368.html'>background png image from pngtree.com</a></span>
+        </footer>
+
 
 
 
