--- a/cv.html
+++ b/cv.html
@@ -263,6 +263,8 @@
 
                     <div class="cvSectionBgGradient">
 
+                        <img src="../img/projects/bgShapes1_bjj.png" class="formationsShape" >
+
                         <p class="pageSectionTitle">
                             <span class="highlightSpan">&#x3c;</span> Formations <span class="highlightSpan">/&#x3e;</span>
                             <svg class="trainingSvgContainer" style="position:absolute;">
@@ -346,7 +348,10 @@
 
                     <div class="cvSectionBgGradient">
 
+                        <img src="../img/projects/bgShapes1_bjj.png" class="hobbiesShape" >
+
                         <p class="pageSectionTitle">
+
                             <span class="highlightSpan">&#x3c;</span> Hobbies <span class="highlightSpan">/&#x3e;</span>
 
                             <svg class="hobbiesSvgContainer" style="position:absolute;">
@@ -546,7 +551,11 @@
 
 
 
-        <footer>www.portfolio.basilek.ovh - <a href="https://www.linkedin.com/in/basile-kuntz-719278267/" class="socialFooter"><i class="fa-brands fa-linkedin"></i></a><a href="https://github.com/baku67" class="socialFooter"><i class="fa-brands fa-github"></i></a></footer>
+        <footer class="footerAccueil">
+            <span><a href="mentionslegales.html">Mentions légales</a> - www.bk-dev.fr - </span>
+            <a href="https://www.linkedin.com/in/basile-kuntz-719278267/" class="socialFooter"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/baku67" class="socialFooter"><i class="fa-brands fa-github"></i></a>
+        </footer>
 
     </body>
 
