--- a/index.html
+++ b/index.html
@@ -408,7 +408,11 @@
         
 
 
-        <footer class="footerAccueil">www.portfolio.basilek.ovh - <a href="https://www.linkedin.com/in/basile-kuntz-719278267/" class="socialFooter"><i class="fa-brands fa-linkedin"></i></a><a href="https://github.com/baku67" class="socialFooter"><i class="fa-brands fa-github"></i></a></footer>
+        <footer class="footerAccueil">
+            <span><a href="mentionslegales.html">Mentions légales</a> - www.bk-dev.fr - </span>
+            <a href="https://www.linkedin.com/in/basile-kuntz-719278267/" class="socialFooter"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/baku67" class="socialFooter"><i class="fa-brands fa-github"></i></a>
+        </footer>
 
 
 
