WIP responsiv + style /projets

--- a/cv.html
+++ b/cv.html
@@ -405,6 +405,22 @@
 
                 <div id="competences" class="langages">
 
+
+                    <!-- Test Background shape:  -->
+                    <!-- <img src="../img/projects/shape-redBlue-cropped.png" class="cvBgShape" alt="background shape"> -->
+                    <!-- Test shapes -->
+                    <div class="clipPathShapes clipPathShape1 clipPathShape-blue"></div>
+                    <div class="clipPathShapes clipPathShape2 clipPathShape-blue"></div>
+                    <div class="clipPathShapes clipPathShape3 clipPathShape-blue"></div>
+                    <div class="clipPathShapes clipPathShape4 clipPathShape-blue"></div>
+                    <div class="clipPathShapes clipPathShape5 clipPathShape-blue"></div>
+                    <div class="clipPathShapes clipPathShape6 clipPathShape-red"></div>
+                    <div class="clipPathShapes clipPathShape7 clipPathShape-red"></div>
+                    <div class="clipPathShapes clipPathShape8 clipPathShape-red"></div>
+                    <div class="clipPathShapes clipPathShape9 clipPathShape-red"></div>
+                    <div class="clipPathShapes clipPathShape10 clipPathShape-blue"></div>
+
+
                     <div class="cvSectionBgGradientSkills ">
 
                         <!-- Titre compétences et svg checkbox -->
