WIP fix observer out /cv + SVG dans card pour overflow hidden

--- a/cv.html
+++ b/cv.html
@@ -261,11 +261,11 @@
 
                 <div id="formations" class="formations">
 
-                    <div class="cvSectionBgGradient">
+                    <div class="cvSectionBgGradient overflowHidden">
 
                         <img src="../img/projects/bgShapes1_bjj.png" class="formationsShape" >
 
-                        <p class="pageSectionTitle">
+                        <p class="pageSectionTitle pageSectionTitleFormations">
                             <span class="highlightSpan">&#x3c;</span> Formations <span class="highlightSpan">/&#x3e;</span>
                             <svg class="trainingSvgContainer" style="position:absolute;">
                                 <g class="formationSvg">
@@ -346,11 +346,11 @@
 
                 <div id="hobbies" class="hobbys">
 
-                    <div class="cvSectionBgGradient">
+                    <div class="cvSectionBgGradient overflowHidden">
 
                         <img src="../img/projects/bgShapes1_bjj.png" class="hobbiesShape" >
 
-                        <p class="pageSectionTitle">
+                        <p class="pageSectionTitle pageSectionTitleHobbies">
 
                             <span class="highlightSpan">&#x3c;</span> Hobbies <span class="highlightSpan">/&#x3e;</span>
 
