WIP observer /cv + style&resp /projets

--- a/cv.html
+++ b/cv.html
@@ -390,9 +390,9 @@
                             <div class="separateurListe2"></div>
                             <li class="cvLineHeightMobile">Photographie sous-marine <span class="cvGrisedText">("Coup de coeur de la rédaction", Divosea Août 2014)</span></li>
                             <div class="separateurListe2"></div>
-                            <li>Scoutisme, Camping, Randonnée</li>
+                            <li>Camping, Randonnée</li>
                             <div class="separateurListe2"></div>
-                            <li>Dessin crayon, retouches numériques</li>
+                            <li>Dessin, SVG, retouches numériques</li>
                             <div class="separateurListe2"></div>
                             <li>Découverte de jeux vidéos</li>
                         </ul>
@@ -424,7 +424,7 @@
                     <div class="cvSectionBgGradientSkills ">
 
                         <!-- Titre compétences et svg checkbox -->
-                        <p class="pageSectionTitle pageSectionTitleMobile" style="text-align: center;">
+                        <p class="pageSectionTitle pageSectionTitleMobile pageSectionTitleSkills" style="text-align: center;">
                             <span class="highlightSpan">&#x3c;</span> Compétences <span class="highlightSpan">/&#x3e;</span>
 
                             <svg class="skillsSvgContainer" style="position:absolute;">
@@ -517,6 +517,7 @@
                             <li>Photoshop / pixlr.com</li>
                             <li>Figma</li>
                             <li>Postman/Insomnia</li>
+                            <li>SvgPathEditor</li>
                             <li>Design Pattern MVC</li>
                         </ul>
 
