--- a/projets.html
+++ b/projets.html
@@ -254,12 +254,12 @@
                                 <img src="../img/projects/bgShapes1_squadforge2-min.png" class="projectShapeBgAnim2 projectShapesDiv-bottom-right isDesktop" />
 
 
-                                <div id="projectContainer">
+                                <div id="projectContainer1" class="projectContainer">
 
                                     <div class="gridProjetHeaderContainer description1boxShadow">
 
 
-                                        <div class="iframe">
+                                        <div id="iframe1" class="iframe">
 
                                             <!-- Shape absolute (haut gauche) Mobile -->
                                             <img src="../img/projects/bgShapes2-min.png" class="projectShapeBgAnim1-mobile projectShapesDiv-top-left isMobile" />
@@ -443,11 +443,11 @@
                                 <img src="../img/projects/bgShapes1_bjj.png" class="projectShapeBgAnim2 projectShapesDiv-bottom-right isDesktop" />
 
 
-                                <div id="projectContainer">
+                                <div id="projectContainer2" class="projectContainer">
 
                                     <div class="gridProjetHeaderContainer description2boxShadow">
 
-                                        <div class="iframe">
+                                        <div id="iframe2" class="iframe">
                                             <div class="boutonMockup"></div>
                                             <div class="boutonMockup2"></div>
                                             <div class="bouton3Container"><div class="boutonMockup3"></div></div>
@@ -613,11 +613,11 @@
 
                         <swiper-slide>
 
-                            <div id="projectContainer2" class="projet3PositionMobile">
+                            <div id="projectContainer3" class="projectContainer projet3PositionMobile">
 
                                 <div class="gridProjetHeaderContainer description3boxShadow">
 
-                                    <div class="iframe">
+                                    <div id="iframe3" class="iframe">
                                         <div class="boutonMockup"></div>
                                         <div class="boutonMockup2"></div>
                                         <div class="bouton3Container"><div class="boutonMockup3"></div></div>
