--- a/index.html
+++ b/index.html
@@ -233,6 +233,9 @@
 
                 <div id="accueilGridPresentation" class="accueilGrid">
 
+                    <!-- background Shape (MOBILE) -->
+                    <img src="../img/projects/shapeAccueil-min.png" class="shapePresentation isMobile">
+
                     <div class="fixScalePortraitPC" style="position:relative;">
                         
                         <div id="portraitAccueil" class="imgAccueil" style="z-index:999;" data-theme="dark">
@@ -247,6 +250,10 @@
                     </div>
 
                     <p id="paragrapheAccueil" class="paragrapheAccueil" data-theme="dark"> 
+
+                        <!-- background Shape (DESKTOP) -->
+                        <img src="../img/projects/shapeAccueil-min.png" class="shapePresentation isDesktop">
+
                         <!-- <span style="margin-left: 5px; font-size: 130%;">Bienvenue, </span>
                         <br><br> -->
                         &nbsp;&nbsp;&nbsp;&nbsp;<span class="accueilWord">Je</span> <span class="accueilWord">suis</span> <span class="accueilWord">Basile</span> <span class="accueilWord">KUNTZ,</span> <span class="accueilWord">et</span> <span class="accueilWord">je</span> <span class="accueilWord">viens</span> <span class="accueilWord">d'obtenir</span> <span class="accueilWord">mon</span> <span class="accueilWord">titre</span> <span class="accueilWord">de</span> <strong><span class="accueilWord">développeur</span> <span class="accueilWord">web</span> <span class="accueilWord">et</span> <span class="accueilWord">web</span> <span class="accueilWord">mobile</span></strong> <span class="accueilWord">au</span> <span class="accueilWord">centre</span> <span class="accueilWord">Élan</span> <span class="accueilWord">Formation</span> <span class="accueilWord">à</span> <span class="accueilWord">Strasbourg.</span> <span class="accueilWord">Je</span> <span class="accueilWord">cherche</span> <span class="accueilWord">actuellement</span> <span class="accueilWord">à</span> <span class="accueilWord">mettre</span> <span class="accueilWord">à</span> <span class="accueilWord">profit</span> <span class="accueilWord">mes</span> <span class="accueilWord">compétences</span> <span class="accueilWord">et</span> <span class="accueilWord">à</span> <span class="accueilWord">m'améliorer</span> <span class="accueilWord">dans</span> <span class="accueilWord">le</span> <span class="accueilWord">cadre</span> <span class="accueilWord">d'une</span> <strong><span class="accueilWord">alternance</span> <span class="accueilWord">en</span> <span class="accueilWord">licence</span> <span class="accueilWord">CDA</span></strong><span class="accueilWord">.</span>
