--- a/index.html
+++ b/index.html
@@ -231,32 +231,29 @@
 
                 </br>
 
+
                 <div id="accueilGridPresentation" class="accueilGrid">
 
                     <!-- background Shape (MOBILE) -->
-                    <img src="../img/projects/shapeAccueil-min.png" class="shapePresentation isMobile">
+                    <img src="../img/projects/shapeAccueil-min.png" class="shapePresentation isMobile" />
 
-                    <div class="fixScalePortraitPC" style="position:relative;">
-                        
+                    <div class="fixScalePortraitPC isDesktop" style="position:relative;">
                         <div id="portraitAccueil" class="imgAccueil" style="z-index:999;" data-theme="dark">
-
-                            <!-- WIP traits -->
-                            <!-- <div class="portraitTrait1"></div> -->
-
                             <img src="..\img\portraits\portrait_bw.png" class="testPopPortraitImg" />
-
                         </div>
-
                     </div>
 
                     <p id="paragrapheAccueil" class="paragrapheAccueil" data-theme="dark"> 
-
                         <!-- background Shape (DESKTOP) -->
-                        <img src="../img/projects/shapeAccueil-min.png" class="shapePresentation isDesktop">
+                        <img src="../img/projects/shapeAccueil-min.png" class="shapePresentation isDesktop" />
 
-                        <!-- <span style="margin-left: 5px; font-size: 130%;">Bienvenue, </span>
-                        <br><br> -->
-                        &nbsp;&nbsp;&nbsp;&nbsp;<span class="accueilWord">Je</span> <span class="accueilWord">suis</span> <span class="accueilWord">Basile</span> <span class="accueilWord">KUNTZ,</span> <span class="accueilWord">et</span> <span class="accueilWord">je</span> <span class="accueilWord">viens</span> <span class="accueilWord">d'obtenir</span> <span class="accueilWord">mon</span> <span class="accueilWord">titre</span> <span class="accueilWord">de</span> <strong><span class="accueilWord">développeur</span> <span class="accueilWord">web</span> <span class="accueilWord">et</span> <span class="accueilWord">web</span> <span class="accueilWord">mobile</span></strong> <span class="accueilWord">au</span> <span class="accueilWord">centre</span> <span class="accueilWord">Élan</span> <span class="accueilWord">Formation</span> <span class="accueilWord">à</span> <span class="accueilWord">Strasbourg.</span> <span class="accueilWord">Je</span> <span class="accueilWord">cherche</span> <span class="accueilWord">actuellement</span> <span class="accueilWord">à</span> <span class="accueilWord">mettre</span> <span class="accueilWord">à</span> <span class="accueilWord">profit</span> <span class="accueilWord">mes</span> <span class="accueilWord">compétences</span> <span class="accueilWord">et</span> <span class="accueilWord">à</span> <span class="accueilWord">m'améliorer</span> <span class="accueilWord">dans</span> <span class="accueilWord">le</span> <span class="accueilWord">cadre</span> <span class="accueilWord">d'une</span> <strong><span class="accueilWord">alternance</span> <span class="accueilWord">en</span> <span class="accueilWord">licence</span> <span class="accueilWord">CDA</span></strong><span class="accueilWord">.</span>
+                        <!-- <img src="" alt="test" class="isMobile" /> -->
+                        <!-- <div id="portraitAccueil" class="imgAccueil isMobile" style="z-index:999;" data-theme="dark"> -->
+                            <img src="..\img\portraits\portrait_bw.png" class="portraitMobile testPopPortraitImg isMobile" />
+                        <!-- </div> -->
+
+                        &nbsp;&nbsp;&nbsp;&nbsp;
+                        <span class="accueilWord">Je</span> <span class="accueilWord">suis</span> <span class="accueilWord">Basile</span> <span class="accueilWord">KUNTZ,</span> <span class="accueilWord">et</span> <span class="accueilWord">je</span> <span class="accueilWord">viens</span> <span class="accueilWord">d'obtenir</span> <span class="accueilWord">mon</span> <span class="accueilWord">titre</span> <span class="accueilWord">de</span> <strong><span class="accueilWord">développeur</span> <span class="accueilWord">web</span> <span class="accueilWord">et</span> <span class="accueilWord">web</span> <span class="accueilWord">mobile</span></strong> <span class="accueilWord">au</span> <span class="accueilWord">centre</span> <span class="accueilWord">Élan</span> <span class="accueilWord">Formation</span> <span class="accueilWord">à</span> <span class="accueilWord">Strasbourg.</span> <span class="accueilWord">Je</span> <span class="accueilWord">cherche</span> <span class="accueilWord">actuellement</span> <span class="accueilWord">à</span> <span class="accueilWord">mettre</span> <span class="accueilWord">à</span> <span class="accueilWord">profit</span> <span class="accueilWord">mes</span> <span class="accueilWord">compétences</span> <span class="accueilWord">et</span> <span class="accueilWord">à</span> <span class="accueilWord">m'améliorer</span> <span class="accueilWord">dans</span> <span class="accueilWord">le</span> <span class="accueilWord">cadre</span> <span class="accueilWord">d'une</span> <strong><span class="accueilWord">alternance</span> <span class="accueilWord">en</span> <span class="accueilWord">licence</span> <span class="accueilWord">CDA</span></strong><span class="accueilWord">.</span>
                         <span class="accueilWord">J’apprécie</span> <span class="accueilWord">les</span> <span class="accueilWord">choses</span> <span class="accueilWord">simples</span> <span class="accueilWord">de</span> <span class="accueilWord">la</span> <span class="accueilWord">vie,</span> <span class="accueilWord">ma</span> <span class="accueilWord">personnalité</span> <span class="accueilWord">et</span> <span class="accueilWord">ma</span> <span class="accueilWord">créativité</span> <span class="accueilWord">parleront</span> <span class="accueilWord">d’elles-même.</span>
                         <br><span class="accueilWord">Donner</span> <span class="accueilWord">vie</span> <span class="accueilWord">à</span> <span class="accueilWord">un</span> <span class="accueilWord">site</span> <span class="accueilWord">web,</span> <span class="accueilWord">c’est</span> <span class="accueilWord">surprenant,</span> <span class="accueilWord">motivant,</span> <span class="accueilWord">beau,</span> <span class="accueilWord">captivant,</span> <span class="accueilWord">fascinant,</span> <span class="accueilWord">prenant…</span> <span class="accueilWord">et</span> <span class="accueilWord">ça</span> <span class="accueilWord">j’adore</span> <span class="accueilWord">!</span> 
                         <br><span class="accueilWord">Et</span> <span class="accueilWord">si</span> <span class="accueilWord">on</span> <span class="accueilWord">se</span> <span class="accueilWord">rencontrait</span> <span class="accueilWord">pour</span> <span class="accueilWord">discuter</span> <span class="accueilWord">de</span> <span class="accueilWord">votre</span> <span class="accueilWord">projet</span> <span class="accueilWord">?</span>
