WIP style + ScrollToTop + observer btn projets /accueil

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
  
 
             <!-- Header -->
-            <header id="headerAccueil" style="position:relative;" data-theme="dark">
+            <header id="headerAccueil" class="darkedHeader" style="position:relative;" data-theme="dark">
 
                 <div id="pageTitleDiv" style="width:100%;">
                     <h1 id="titleH1" class="testH1" style="padding-top:2px;">
