--- a/cv.html
+++ b/cv.html
@@ -61,7 +61,7 @@
 
         <!-- ScrollToTop -->
         <div id="scrollToTop" class="isMobile">
-            <i class="fa-solid fa-arrow-up"></i>
+            <i class="fa-solid fa-arrow-up scrollToTopIcon"></i>
         </div>
 
         <!-- (Desktop) Lors scroll: sideNav -->
@@ -421,7 +421,7 @@
                     <div class="clipPathShapes clipPathShape10 clipPathShape-blue"></div>
 
 
-                    <div class="cvSectionBgGradientSkills ">
+                    <div id="cvSectionBgGradientSkills" class="cvSectionBgGradientSkills ">
 
                         <!-- Titre compétences et svg checkbox -->
                         <p class="pageSectionTitle pageSectionTitleMobile pageSectionTitleSkills" style="text-align: center;">
@@ -568,7 +568,7 @@
 
 
 
-        <footer class="footerAccueil">
+        <footer id="footer" class="footerCv">
             <span><a href="mentionslegales.html">Mentions légales</a> - www.bk-dev.fr - </span>
             <a href="https://www.linkedin.com/in/basile-kuntz-719278267/" class="socialFooter"><i class="fa-brands fa-linkedin"></i></a>
             <a href="https://github.com/baku67" class="socialFooter"><i class="fa-brands fa-github"></i></a>
