--- a/projets.html
+++ b/projets.html
@@ -834,11 +834,13 @@
 
         </div>
 
-        <footer class="footerProkets">
-            <span><a href="mentionslegales.html">Mentions légales</a> - www.bk-dev.fr - </span>
-            <a href="https://www.linkedin.com/in/basile-kuntz-719278267/" class="socialFooter"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://github.com/baku67" class="socialFooter"><i class="fa-brands fa-github"></i></a>
-            <br>
+        <footer class="footerProjets">
+            <div>
+                <span><a href="mentionslegales.html">Mentions légales</a> - www.bk-dev.fr - </span>
+                <a href="https://www.linkedin.com/in/basile-kuntz-719278267/" class="socialFooter"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/baku67" class="socialFooter"><i class="fa-brands fa-github"></i></a>
+                <br/>
+            </div>
             <span style="font-size:80%;"><a href='https://pngtree.com/freepng/blue-geometric-honeycomb_2498368.html'>background png image from pngtree.com</a></span>
         </footer>
 
