bg shapes restantes /cv + WIP bg foncé sous-sections /cv

--- a/cv.html
+++ b/cv.html
@@ -289,7 +289,7 @@
 
                             <div class="traitFormationsPuces"></div>
 
-                            <li>
+                            <li class="cvDarkedLi">
                                 2023: Formation <span class="highlightSpan">"Développeur web et web mobile"</span> à Élan Formation Strasbourg
                                 <br>
                                 <div id="stageBandeau1" class="stageBandeau">
@@ -309,7 +309,7 @@
 
                             <div class="separateurListe light"></div>
 
-                            <li>
+                            <li class="cvDarkedLi">
                                 2020-2022: <span class="highlightSpan">BTS SIO</span> - Option <span class="highlightSpan">SLAM</span> (Solutions Logicielles et Applications Métiers) <br>CCI campus Illkirch
                                 </br>
 
@@ -330,11 +330,15 @@
 
                             <div class="separateurListe light"></div>
 
-                            <li>2019: <span class="highlightSpan">Service Civique</span> (Inclusion numérique)</li>
+                            <li class="cvDarkedLi"> 
+                                2019: <span class="highlightSpan">Service Civique</span> (Inclusion numérique)
+                            </li>
 
                             <div class="separateurListe light"></div>
 
-                            <li>2015: Baccalauréat Scientifique</li>
+                            <li class="cvDarkedLi"> 
+                                2015: Baccalauréat Scientifique
+                            </li>
 
                         </ul>
 
@@ -492,6 +496,8 @@
 
                     <div class="cvSectionBgGradient">
 
+                        <img src="../img/projects/bgShapes1_bjj.png" class="outilsShape" >
+
                         <p class="pageSectionTitle outilsSectionTitleMobile">
                             <span class="highlightSpan">&#x3c;</span> Outils <span class="highlightSpan">/&#x3e;</span>
 
@@ -530,6 +536,8 @@
                 <div id="langues" class="langues">
 
                     <div class="cvSectionBgGradient">
+
+                        <img src="../img/projects/shapeAccueil-min.png" class="langsShape" >
 
                         <p class="pageSectionTitle">
                             <span class="highlightSpan">&#x3c;</span> Langues <span class="highlightSpan">/&#x3e;</span>
