--- a/projets.html
+++ b/projets.html
@@ -321,14 +321,14 @@
                                                 </ul>
 
                                                 <ul class="projetFuncList">
-                                                    <li>Autentification</li>
-                                                    <li>Système de modération (validation des public, censure, signalements)</li>
+                                                    <li>Autentification et rôles</li>
+                                                    <li>Système de modération (validation des publications, censure, signalements, sanctions)</li>
                                                     <li>Signalements à la modération</li>
                                                     <li>Publication de Topics, Médias, Commentaires</li>
                                                     <li>Upvotes et likes/dislikes</li>
                                                     <li>Création et candidatures de Teams</li>
-                                                    <li>Planifications de sessions de gaming (Team)</li>
-                                                    <li>Jeux favoris -> page d'accueil filtrée</li>
+                                                    <li>Planifications de sessions de jeu</li>
+                                                    <li>Page d'accueil filtrée selon favoris</li>
                                                     <li>Page de jeux personalisées</li>
                                                 </ul>
 
@@ -495,8 +495,9 @@
                                                     </ul>
 
                                                     <ul class="projetFuncList projetFuncListPositionMobile">
-                                                        <li>Système de compte (+Crédits quotidiens)</li>
-                                                        <li>Système de progression (expérience/niveaux)</li>
+                                                        <li>Autentification</li>
+                                                        <li>Crédits quotidiens à la connexion</li>
+                                                        <li>Système de progression (expérience & niveaux)</li>
                                                         <li>Système de Win-streak</li>
                                                         <li>Affichage du top 3 sur l'accueil</li>
                                                         <li>Historique et stats personnelles</li>
