--- a/loisirs.html
+++ b/loisirs.html
@@ -175,28 +175,17 @@
 
             <!-- MODALS GALERIE -->
             <div id="myModal" class="modal">
-                <span class="close">&times;</span>
+
+                <span class="closeModal">&times;</span>
+
                 <img class="modal-image" id="modalImage">
-                <div id="caption"></div>
-
-
-                <!-- WIP alignement -->
-                <!-- <div>
-                    <div id="arrowPrevious" style="font-size: 5em; color: white; z-index: 0; width: 50px;">
-                        <
-                    </div> 
-                    <img class="modal-image" id="modalImage">
-                    <div id="arrowNext" style="font-size: 5em; color: white; z-index: 0; width: 50px;">
-                        >
-                    </div>
-                </div>  -->
-                <!-- Fin WIP -->
+                <!-- <div id="caption"></div> -->
 
                 <div id="arrowPrevious">
-                    <
+                    <i class="fa-solid fa-circle-left"></i>
                 </div>  
                 <div id="arrowNext">
-                    >
+                    <i class="fa-solid fa-circle-right"></i>
                 </div> 
             </div>
             <!-- Fin modal -->
@@ -303,7 +292,9 @@
 
                     <div class="galerieAccueil">
 
-                        <article class="location-listing images" alt="1" def="Poti poasson" style="margin:auto; position:relative; cursor:pointer;">
+
+                        <!-- Mettre attribut def="poisson" pour label sous modal -->
+                        <article class="location-listing images" alt="1" style="margin:auto; position:relative; cursor:pointer;">
                             <p class="loupesGalerie">Zoom</p>
                             <div class="photosGallerie photo1 location-image" style="display:block;">
                                     <img class="imgGalleries" src="../img/galerie/1_preview.jpg"/>
@@ -734,7 +725,7 @@
 
             </div>
 
-            <footer class="footerAccueil">
+            <footer id="footer" class="footerAccueil">
                 <span><a href="mentionslegales.html">Mentions légales</a> - www.bk-dev.fr - </span>
                 <a href="https://www.linkedin.com/in/basile-kuntz-719278267/" class="socialFooter"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/baku67" class="socialFooter"><i class="fa-brands fa-github"></i></a>
