WIP gallerie + WIP navBurger mobile anim

--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
                         <span>Loisirs</span>
                     </a>
                 </li>
-                <li class="lablelsBurgerContainer">
+                <li id="lablelsBurgerContainer" class="lablelsBurgerContainer">
                     <span id="status"> #OpenToWork</span>
                     <span id="status2"><i class="fa-solid fa-magnifying-glass"></i> Alternance CDA</span>
                 </li>
-                <li class="socialBurgerContainer">
+                <li id="socialBurgerContainer" class="socialBurgerContainer">
                     <a href="https://github.com/baku67" target="_blank" style="padding:2px">
                         <i class="fa-brands fa-github burgerSocialBtn"></i>
                     </a>
