WIP anim+shapes+liens navBurger

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
         <!-- WIP menu-burger mobile -->
         <div id="mySidenav" class="sidenav isMobile" data-theme="dark">
 
+            <img src="../img/projects/bgShapes1_bjj.png" class="menuBurgerShape" />
+
             <a id="closeBtn" href="#" class="close">×</a>
 
             <ul style="position:relative;">
