--- a/projets.html
+++ b/projets.html
@@ -96,6 +96,8 @@
         <!-- WIP menu-burger mobile -->
         <div id="mySidenav" class="sidenav isMobile">
 
+            <img src="../img/projects/bgShapes1_bjj.png" class="menuBurgerShape" />
+
             <a id="closeBtn" href="#" class="close">×</a>
 
             <ul style="position:relative;">
