load des <video> window.onload et selon device + fix conflit d'id /accueil

--- a/index.html
+++ b/index.html
@@ -344,8 +344,8 @@
                         <div class="accueilVideoPcDiv1 isDesktop">
                             <div class="accueilVideoPcDiv isDesktop">
 
-                                <video autoplay controls muted loop id="accueilVideo" class="accueilVideoPcVideo isDesktop" data-theme="dark">
-                                    <source src="..\img\demos\projectsPreview_trimmedPc2.mp4" type="video/mp4">
+                                <video autoplay controls muted loop id="accueilVideoDesktop" class="accueilVideoPcVideo isDesktop" data-theme="dark">
+                                    <source src="" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
 
@@ -357,8 +357,8 @@
                         </div>
 
                         <!-- Mobile Bouton (sans controls) video trimmed -->
-                        <video autoplay muted loop id="accueilVideo" class="accueilVideo isMobile" data-theme="dark">
-                            <source src="..\img\demos\projectsPreview_trimmedMobile4-mobileRedimed.mp4" type="video/mp4">
+                        <video autoplay muted loop id="accueilVideoMobile" class="accueilVideo isMobile" data-theme="dark">
+                            <source src="" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
 
