Fix conflit observerJS et animCSS /accueil + WIP performances mobile /accueil

--- a/index.html
+++ b/index.html
@@ -255,10 +255,96 @@
                         <!-- </div> -->
 
                         &nbsp;&nbsp;&nbsp;&nbsp;
-                        <span class="accueilWord">Je</span> <span class="accueilWord">suis</span> <span class="accueilWord">Basile</span> <span class="accueilWord">KUNTZ,</span> <span class="accueilWord">et</span> <span class="accueilWord">je</span> <span class="accueilWord">viens</span> <span class="accueilWord">d'obtenir</span> <span class="accueilWord">mon</span> <span class="accueilWord">titre</span> <span class="accueilWord">de</span> <strong><span class="accueilWord">développeur</span> <span class="accueilWord">web</span> <span class="accueilWord">et</span> <span class="accueilWord">web</span> <span class="accueilWord">mobile</span></strong> <span class="accueilWord">au</span> <span class="accueilWord">centre</span> <span class="accueilWord">Élan</span> <span class="accueilWord">Formation</span> <span class="accueilWord">à</span> <span class="accueilWord">Strasbourg.</span> <span class="accueilWord">Je</span> <span class="accueilWord">cherche</span> <span class="accueilWord">actuellement</span> <span class="accueilWord">à</span> <span class="accueilWord">mettre</span> <span class="accueilWord">à</span> <span class="accueilWord">profit</span> <span class="accueilWord">mes</span> <span class="accueilWord">compétences</span> <span class="accueilWord">et</span> <span class="accueilWord">à</span> <span class="accueilWord">m'améliorer</span> <span class="accueilWord">dans</span> <span class="accueilWord">le</span> <span class="accueilWord">cadre</span> <span class="accueilWord">d'une</span> <strong><span class="accueilWord">alternance</span> <span class="accueilWord">en</span> <span class="accueilWord">licence</span> <span class="accueilWord">CDA</span></strong><span class="accueilWord">.</span>
-                        <span class="accueilWord">J’apprécie</span> <span class="accueilWord">les</span> <span class="accueilWord">choses</span> <span class="accueilWord">simples</span> <span class="accueilWord">de</span> <span class="accueilWord">la</span> <span class="accueilWord">vie,</span> <span class="accueilWord">ma</span> <span class="accueilWord">personnalité</span> <span class="accueilWord">et</span> <span class="accueilWord">ma</span> <span class="accueilWord">créativité</span> <span class="accueilWord">parleront</span> <span class="accueilWord">d’elles-même.</span>
-                        <br><span class="accueilWord">Donner</span> <span class="accueilWord">vie</span> <span class="accueilWord">à</span> <span class="accueilWord">un</span> <span class="accueilWord">site</span> <span class="accueilWord">web,</span> <span class="accueilWord">c’est</span> <span class="accueilWord">surprenant,</span> <span class="accueilWord">motivant,</span> <span class="accueilWord">beau,</span> <span class="accueilWord">captivant,</span> <span class="accueilWord">fascinant,</span> <span class="accueilWord">prenant…</span> <span class="accueilWord">et</span> <span class="accueilWord">ça</span> <span class="accueilWord">j’adore</span> <span class="accueilWord">!</span> 
-                        <br><span class="accueilWord">Et</span> <span class="accueilWord">si</span> <span class="accueilWord">on</span> <span class="accueilWord">se</span> <span class="accueilWord">rencontrait</span> <span class="accueilWord">pour</span> <span class="accueilWord">discuter</span> <span class="accueilWord">de</span> <span class="accueilWord">votre</span> <span class="accueilWord">projet</span> <span class="accueilWord">?</span>
+                        <span class="accueilWord word1">Je</span> 
+                        <span class="accueilWord word2">suis</span> 
+                        <span class="accueilWord word3">Basile</span> 
+                        <span class="accueilWord word4">KUNTZ,</span> 
+                        <span class="accueilWord word5">et</span> 
+                        <span class="accueilWord word6">je</span> 
+                        <span class="accueilWord word7">viens</span> 
+                        <span class="accueilWord word8">d'obtenir</span> 
+                        <span class="accueilWord word9">mon</span> 
+                        <span class="accueilWord word10">titre</span> 
+                        <span class="accueilWord word11">de</span> 
+                        <strong>
+                            <span class="accueilWord word12">développeur</span> 
+                            <span class="accueilWord word13">web</span> 
+                            <span class="accueilWord word14">et</span> 
+                            <span class="accueilWord word15">web</span> 
+                            <span class="accueilWord word16">mobile</span>
+                        </strong> 
+                        <span class="accueilWord word17">au</span> 
+                        <span class="accueilWord word18">centre</span> 
+                        <span class="accueilWord word19">Élan</span> 
+                        <span class="accueilWord word20">Formation</span> 
+                        <span class="accueilWord word21">à</span> 
+                        <span class="accueilWord word22">Strasbourg.</span> 
+                        <span class="accueilWord word23">Je</span> 
+                        <span class="accueilWord word24">cherche</span> 
+                        <span class="accueilWord word25">actuellement</span> 
+                        <span class="accueilWord word26">à</span> 
+                        <span class="accueilWord word27">mettre</span> 
+                        <span class="accueilWord word28">à</span> 
+                        <span class="accueilWord word29">profit</span> 
+                        <span class="accueilWord word30">mes</span> 
+                        <span class="accueilWord word31">compétences</span> 
+                        <span class="accueilWord word32">et</span> 
+                        <span class="accueilWord word33">à</span> 
+                        <span class="accueilWord word34">m'améliorer</span> 
+                        <span class="accueilWord word35">dans</span> 
+                        <span class="accueilWord word36">le</span> 
+                        <span class="accueilWord word37">cadre</span> 
+                        <span class="accueilWord word38">d'une</span> 
+                        <strong>
+                            <span class="accueilWord word39">alternance</span> 
+                            <span class="accueilWord word40">en</span> 
+                            <span class="accueilWord word41">licence</span> 
+                            <span class="accueilWord word42">CDA.</span>
+                        </strong>
+                        <span class="accueilWord word44">J’apprécie</span> 
+                        <span class="accueilWord word45">les</span> 
+                        <span class="accueilWord word46">choses</span> 
+                        <span class="accueilWord word47">simples</span> 
+                        <span class="accueilWord word48">de</span> 
+                        <span class="accueilWord word49">la</span> 
+                        <span class="accueilWord word50">vie,</span> 
+                        <span class="accueilWord word51">ma</span> 
+                        <span class="accueilWord word52">personnalité</span> 
+                        <span class="accueilWord word53">et</span> 
+                        <span class="accueilWord word54">ma</span> 
+                        <span class="accueilWord word55">créativité</span> 
+                        <span class="accueilWord word56">parleront</span> 
+                        <span class="accueilWord word57">d’elles-même.</span>
+                        <br>
+                        <span class="accueilWord word58">Donner</span> 
+                        <span class="accueilWord word59">vie</span> 
+                        <span class="accueilWord word60">à</span> 
+                        <span class="accueilWord word61">un</span> 
+                        <span class="accueilWord word62">site</span> 
+                        <span class="accueilWord word63">web,</span> 
+                        <span class="accueilWord word64">c’est</span> 
+                        <span class="accueilWord word65">surprenant,</span> 
+                        <span class="accueilWord word66">motivant,</span> 
+                        <span class="accueilWord word67">beau,</span> 
+                        <span class="accueilWord word68">captivant,</span> 
+                        <span class="accueilWord word69">fascinant,</span> 
+                        <span class="accueilWord word70">prenant…</span> 
+                        <span class="accueilWord word71">et</span> 
+                        <span class="accueilWord word72">ça</span> 
+                        <span class="accueilWord word73">j’adore</span> 
+                        <span class="accueilWord word74">!</span> 
+                        <br>
+                        <span class="accueilWord word75">Et</span> 
+                        <span class="accueilWord word76">si</span> 
+                        <span class="accueilWord word77">on</span> 
+                        <span class="accueilWord word78">se</span> 
+                        <span class="accueilWord word79">rencontrait</span> 
+                        <span class="accueilWord word80">pour</span> 
+                        <span class="accueilWord word81">discuter</span> 
+                        <span class="accueilWord word82">de</span> 
+                        <span class="accueilWord word83">votre</span> 
+                        <span class="accueilWord word84">projet</span> 
+                        <span class="accueilWord word85">?</span>
                     </p>
 
                 </div>
