Timeout() observer anims  /cv mobile + Redim Shapes mobile

--- a/cv.html
+++ b/cv.html
@@ -265,7 +265,9 @@
 
                     <div class="cvSectionBgGradient overflowHidden">
 
-                        <img src="../img/projects/bgShapes1_bjj.png" class="formationsShape" >
+                        <!-- Image resoltion+poid responsive -->
+                        <img src="../img/projects/bgShapes1_bjj.png" class="formationsShape isDesktop" >
+                        <img src="../img/projects/mobile/bgShapes1_bjj_mobile.png" class="formationsShape isMobile" >
 
                         <p class="pageSectionTitle pageSectionTitleFormations">
                             <span class="highlightSpan">&#x3c;</span> Formations <span class="highlightSpan">/&#x3e;</span>
@@ -354,7 +356,10 @@
 
                     <div class="cvSectionBgGradient overflowHidden">
 
-                        <img src="../img/projects/bgShapes1_bjj.png" class="hobbiesShape" >
+                        <!-- Image resoltion+poid responsive -->
+                        <img src="../img/projects/bgShapes1_bjj.png" class="hobbiesShape isDesktop" >
+                        <img src="../img/projects/mobile/bgShapes1_bjj_mobile.png" class="formationsShape isMobile" >
+
 
                         <p class="pageSectionTitle pageSectionTitleHobbies">
 
@@ -497,8 +502,11 @@
                 <div id="outils" class="outils">
 
                     <div class="cvSectionBgGradient">
+                        
+                        <!-- Image resoltion+poid responsive -->
+                        <img src="../img/projects/bgShapes1_bjj.png" class="outilsShape isDesktop">
+                        <img src="../img/projects/mobile/bgShapes1_bjj_mobile.png" class="formationsShape isMobile" >
 
-                        <img src="../img/projects/bgShapes1_bjj.png" class="outilsShape" >
 
                         <p class="pageSectionTitle outilsSectionTitleMobile">
                             <span class="highlightSpan">&#x3c;</span> Outils <span class="highlightSpan">/&#x3e;</span>
