*Horlogerie* timeOut/Interval/animation-delai /accueil text&raie + accueil opti shape mobile

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <div id="accueilGridPresentation" class="accueilGrid">
 
                     <!-- background Shape (MOBILE) -->
-                    <img src="../img/projects/shapeAccueil-min.png" class="shapePresentation isMobile" />
+                    <img src="../img/projects/mobile/shapeAccueil-min_mobile.png" class="shapePresentation isMobile" />
 
                     <div class="fixScalePortraitPC isDesktop" style="position:relative;">
                         <div id="portraitAccueil" class="imgAccueil" style="z-index:999;" data-theme="dark">
@@ -256,9 +256,12 @@
 
                         &nbsp;&nbsp;&nbsp;&nbsp;
                         <span class="accueilWord word1">Je</span> 
-                        <span class="accueilWord word2">suis</span> 
+                        <!-- <span class="accueilWord word2">suis</span> 
                         <span class="accueilWord word3">Basile</span> 
-                        <span class="accueilWord word4">KUNTZ,</span> 
+                        <span class="accueilWord word4">KUNTZ,</span>  -->
+                        <span class="accueilWord word2">m'</span>
+                        <span class="accueilWord word3">appelle</span> 
+                        <span class="accueilWord word4">Basile</span> 
                         <span class="accueilWord word5">et</span> 
                         <span class="accueilWord word6">je</span> 
                         <span class="accueilWord word7">viens</span> 
