--- a/loisirs.html
+++ b/loisirs.html
@@ -239,8 +239,8 @@
             <!-- Contenu (load JS) -->
             <div id="pageContainer">
 
-                <h3 class="galerieTitle isDesktop"> Loisirs <span class="carreTitre carreTitreVeille">▪</span></h3>
-                <div class="barreGalerieSouligne isDesktop"></div>
+                <!-- <h3 class="galerieTitle isDesktop"> Loisirs <span class="carreTitre carreTitreVeille">▪</span></h3>
+                <div class="barreGalerieSouligne isDesktop"></div> -->
 
                 <h4 id="photographieTitle">
                     <span id="photoTitlePart1">Ph<img src="../img/letterO_red2.png" class="letterO"/>t<img src="../img/letterO_red2.png" class="letterO"/></span><span id="photoTitlePart2">graph<span id="letterIandPoint">i<div id="scubaDiver"></div><div id="scubaDiverFlash"></div><span id="flashPoint" class="flashPointAnim">.</span><span id="flashPoint2" class="flashPoint2Anim"></span><span id="photoBar"></span><span id="flashRectangle"></span></span>e</span></h4>
