WIP responsiv 2K/4K + WIP /bonjour.html (candidature)

--- a/projets.html
+++ b/projets.html
@@ -683,6 +683,7 @@
                                                     <li>Pages de listing</li>
                                                     <li>Pages détaillées et liens/relations</li>
                                                     <li>Formulaires d'ajouts d'éléments</li>
+                                                    <li>Mobile-first</li>
                                                 </ul>
 
                                             </div>
