--- a/bonjour.html
+++ b/bonjour.html
@@ -6,13 +6,15 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="../css/styleCandidature.css" />
-        <link rel="icon" type="image/x-icon" href="/img/bonjourFavicon.png">
+        <link rel="icon" type="image/x-icon" href="/img/bonjourFavicon2.jpg">
+        <!-- Font Awesome -->
+        <script src="https://kit.fontawesome.com/698848973e.js" crossorigin="anonymous"></script>
         <title>Bonjour :)</title>
     </head>
 
     <body>
 
-        <div class="wrapper">
+        <section class="wrapper">
 
             <svg class="bonjourSvgContainer isDesktop">
                 <g class="bonjourSvg">
@@ -34,7 +36,32 @@
 
             <span class="bonjourTxt">onjour</span>
 
-        </div>
+        </section>
+
+
+
+        <section class="sectionPresentation">
+
+            <p class="presentationParagraph">
+                <span style="margin-left: 25px;">Je</span> m'appelle Basile Kuntz et je suis à la recherche d'une opportunité pour une alternance "<strong>Concepteur Développeur d'Applications</strong>" chez Élan Formation à Strasbourg.
+                <br><br>
+                Je possède de bonnes bases en <strong>Symfony</strong> et <strong>Javacript</strong>, et j'ai commencé un cours en <strong>React</strong>.
+                <br><br>
+                J'apprécie également beaucoup le <strong>front-end</strong>, le <strong>CSS</strong>, et le Responsiv Design.
+            </p>
+
+            <a href="../index.html" class="portfolioLink">Visitez mon Porfolio</a>
+
+            <div class="socialsDiv">
+                <a href="https://www.linkedin.com/in/basile-kuntz-719278267" target="_blank">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+                <a href="https://www.github.com/baku67" target="_blank">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+            </div>
+
+        </section>
 
 
 
