--- a/bonjour.html
+++ b/bonjour.html
@@ -36,6 +36,8 @@
 
             <span class="bonjourTxt">onjour</span>
 
+            <span class="extensionFunTitle">.fun</span>
+
         </section>
 
 
@@ -43,7 +45,26 @@
         <section class="sectionPresentation">
 
             <p class="presentationParagraph">
-                <span style="margin-left: 25px;">Je</span> m'appelle Basile Kuntz et je suis à la recherche d'une opportunité pour une alternance "<strong>Concepteur Développeur d'Applications</strong>" chez Élan Formation à Strasbourg.
+                <span style="margin-left: 25px;">Je</span> m'appelle 
+                <span class="wrapperName">
+                    <svg class="basileSvgContainer isMobile">
+                        <g class="basileSvg">
+                            <path 
+                                class="basileSvgPath"
+                                d="M 5.95 10.15 C 12.25 10.15 12.25 1.05 5.95 1.05 C 3.15 1.05 1.05 3.15 1.05 5.25 L 1.12 16.52 L 9.8 16.52 C 14.35 16.45 16.52 14.84 16.45 11.55 C 16.45 8.75 14.28 7 12.74 7"
+                            />
+                        </g>
+                    </svg>
+                    <svg class="basileSvgContainer isDesktop">
+                        <g class="basileSvg">
+                            <path 
+                                class="basileSvgPath"
+                                d="M 5.95 10.15 C 12.25 10.15 12.25 1.05 5.95 1.05 C 3.15 1.05 1.05 3.15 1.05 5.25 L 1.12 16.52 L 9.8 16.52 C 14.35 16.45 16.52 14.84 16.45 11.55 C 16.45 8.75 14.28 7 12.74 7"
+                            />
+                        </g>
+                    </svg>
+                    asile Kuntz
+                </span> et je suis à la recherche d'une opportunité pour une alternance "<strong>Concepteur Développeur d'Applications</strong>" chez Élan Formation à Strasbourg.
                 <br><br>
                 Je possède de bonnes bases en <strong>Symfony</strong> et <strong>Javacript</strong>, et j'ai commencé un cours en <strong>React</strong>.
                 <br><br>
@@ -62,7 +83,10 @@
             </div>
 
         </section>
+       
 
+
+        <!-- <span>test scrool X</span> -->
 
 
 
