WIP candiature myClientIsRich (checkpoint)

--- a/candidatures/bonjour.html
+++ b/candidatures/bonjour.html
@@ -66,18 +66,21 @@
                     asile Kuntz
                 </span> et je suis à la recherche d'une opportunité pour une alternance "<strong>Concepteur Développeur d'Applications</strong>" chez Élan Formation à Strasbourg.
                 <br><br>
+                Parce que le développement d'applications est ma passion et que j'aime ajouter une touche de Fun à chaque ligne de code, je vous adresse ma candidature pour le poste en alternance au sein de votre entreprise créative et dynamique.
+                <br>Je suis convaincu que l'apprentissage peut être à la fois enrichissant et amusant, et c'est précisément ce que je recherche chez Bonjour.fun. Mon parcours en développement, combiné à ma soif d'apprendre et mon esprit joueur, font de moi un candidat idéal pour contribuer à vos projets innovants.
+                <br><br>
                 Je possède de bonnes bases en <strong>Symfony</strong> et <strong>Javacript</strong>, et j'ai commencé un cours en <strong>React</strong>.
                 <br><br>
                 J'apprécie également beaucoup le <strong>front-end</strong>, le <strong>CSS</strong>, et le Responsiv Design.
             </p>
 
-            <a href="../index.html" class="portfolioLink">Visitez mon Porfolio</a>
+            <a href="../index.html" class="portfolioLink"><i class="fa-solid fa-address-book" style="margin-right:5px;"></i> Visitez mon Porfolio</a>
 
             <div class="socialsDiv">
-                <a href="https://www.linkedin.com/in/basile-kuntz-719278267" target="_blank">
+                <a href="https://www.linkedin.com/in/basile-kuntz-719278267" class="socialBtn" target="_blank">
                     <i class="fa-brands fa-linkedin"></i>
                 </a>
-                <a href="https://www.github.com/baku67" target="_blank">
+                <a href="https://www.github.com/baku67" class="socialBtn" target="_blank">
                     <i class="fa-brands fa-github"></i>
                 </a>
             </div>
