--- a/candidatures/myClientIsRich.html
+++ b/candidatures/myClientIsRich.html
@@ -18,11 +18,15 @@
 
     <body>
 
-        <!-- <img src="youWantMe-min.png" class="youWantMePng" /> -->
-        <img src="youWantMeTxt-min.png" class="youWantMePng" />
-
-
         <div>
+            <div class="testYeu1"></div>
+            <div class="testYeu2"></div>
+            <!-- <img src="youWantMe-min.png" class="youWantMePng" /> -->
+            <img src="youWantMeTxt-min.png" class="youWantMePng" />
+        </div>
+
+
+        <div class="content">
 
 
             <section class="wrapper">
@@ -50,23 +54,7 @@
                     <br>
                     <span style="margin-left: 25px;">Je</span> m'appelle 
                     <span class="wrapperName">
-                        <svg class="basileSvgContainer isMobile">
-                            <g class="basileSvg">
-                                <path 
-                                    class="basileSvgPath"
-                                    d="M 5.95 10.15 C 12.25 10.15 12.25 1.05 5.95 1.05 C 3.15 1.05 1.05 3.15 1.05 5.25 L 1.12 16.52 L 9.8 16.52 C 14.35 16.45 16.52 14.84 16.45 11.55 C 16.45 8.75 14.28 7 12.74 7"
-                                />
-                            </g>
-                        </svg>
-                        <svg class="basileSvgContainer isDesktop">
-                            <g class="basileSvg">
-                                <path 
-                                    class="basileSvgPath"
-                                    d="M 5.95 10.15 C 12.25 10.15 12.25 1.05 5.95 1.05 C 3.15 1.05 1.05 3.15 1.05 5.25 L 1.12 16.52 L 9.8 16.52 C 14.35 16.45 16.52 14.84 16.45 11.55 C 16.45 8.75 14.28 7 12.74 7"
-                                />
-                            </g>
-                        </svg>
-                        asile Kuntz
+                    Basile Kuntz
                     </span> et je suis à la recherche d'une opportunité pour une alternance "<strong>Concepteur Développeur d'Applications</strong>" chez Élan Formation à Strasbourg.
                     <br><br>
                     Parce que le développement d'applications est ma passion et que j'aime ajouter une touche de Fun à chaque ligne de code, je vous adresse ma candidature pour le poste en alternance au sein de votre entreprise créative et dynamique.
