WIP candidature responsiv

--- a/candidatures/myClientIsRich.html
+++ b/candidatures/myClientIsRich.html
@@ -13,7 +13,7 @@
 
         <link rel="preload" as="image" href="https://bk-dev.fr/candidatures/youWantMe-min.png" />
         <link rel="preload" as="font" type="font/woff2" href="https://bk-dev.fr/candidatures/GothamCond-Bold.ttf" crossorigin="anonymous" />
-        <title>MY EMPLOYER IS RICH</title>
+        <title>MY BOSS IS RICH &#x1F4B0;</title>
     </head>
 
     <body>
@@ -22,11 +22,14 @@
             <div class="testYeu1"></div>
             <div class="testYeu2"></div>
             <!-- <img src="youWantMe-min.png" class="youWantMePng" /> -->
-            <img src="youWantMeTxt-min.png" class="youWantMePng" />
+            <img src="youWantMeTxt-min.png" class="youWantMePng isMobile" />
+            <img src="youWantMe-min.png" class="youWantMePng isDesktop" />
         </div>
 
 
         <div class="content">
+
+            <h1 class="youWantMeTxtDesktop isDesktop">YOU WANT ME</h1>
 
 
             <section class="wrapper">
