Fix contrastes CSS

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                     <div id="accueilProjectsDiv" class="accueilProjectsDiv">
 
                         <!-- Label bouton mobile -->
-                        <a href="https://portfolio.basilek.ovh/projets" class="accueilProjectsLabelLink">
+                        <a href="https://bk-dev.fr/projets" class="accueilProjectsLabelLink">
                             <div id="accueilProjectsBtnLabel" class="accueilProjectsBtnLabel">
                                 <span id="accueilProjectsRightDivSpan" class="accueilProjectsRightDivSpan">
                                     Voir mes projets 
@@ -458,7 +458,7 @@
                         </video>
 
                         <!-- Bouton PC -->
-                        <a href="https://portfolio.basilek.ovh/projets" style="height:fit-content; z-index:9;" class="accueilProjectsRightLink">
+                        <a href="https://bk-dev.fr/projets" style="height:fit-content; z-index:9;" class="accueilProjectsRightLink">
                             <div class="accueilProjectsRightDiv">
                                 <img src="..\img/projectsIcon2.png" class="accueilProjectsIcon" />
                                 <span class="accueilProjectsRightDivSpan">
